--- a/playground/package.json
+++ b/playground/package.json
@@ -3,23 +3,20 @@
   "description": "A Pokedex App using and teaching Apollo and Vue.js",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --inline --hot --port 3000",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "dev": "vue build src/index.js"
   },
   "dependencies": {
     "apollo-client": "^0.5.0",
-    "vue": "^2.0.0-rc.1",
-    "vue-apollo": "^1.0.0-beta7-3"
+    "vue": "^2.1.10",
+    "vue-apollo": "^1.3.0",
+    "vue-router": "^2.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-preset-es2015": "^6.13.2",
-    "cross-env": "^1.0.6",
-    "css-loader": "^0.23.1",
-    "file-loader": "^0.8.4",
-    "vue-loader": "^9.2.2",
-    "webpack": "^2.1.0-beta.27",
-    "webpack-dev-server": "^2.1.0-beta.0"
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.10.0",
+    "vue-loader": "^10.1.2",
+    "vue-template-compiler": "^2.1.10",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.2.0"
   }
 }
