--- a/playground/package.json
+++ b/playground/package.json
@@ -3,7 +3,7 @@
   "description": "A Pokedex App using and teaching Apollo and Vue.js",
   "private": true,
   "scripts": {
-    "dev": "vue build src/index.js"
+    "dev": "vue build src/index.js --config ./vue.config.js"
   },
   "dependencies": {
     "apollo-client": "^0.5.0",
