--- a/playground/package.json
+++ b/playground/package.json
@@ -8,15 +8,11 @@
   "dependencies": {
     "apollo-client": "^0.5.0",
     "vue": "^2.1.10",
+    "vue-template-compiler": "^2.1.10",
     "vue-apollo": "^1.3.0",
     "vue-router": "^2.2.0"
   },
   "devDependencies": {
-    "css-loader": "^0.26.1",
-    "file-loader": "^0.10.0",
-    "vue-loader": "^10.1.2",
-    "vue-template-compiler": "^2.1.10",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0"
+    "vue-cli": "^2.8.0"
   }
 }
